--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = credentials
-version = 1.0
+name = cpiapi
+version = 2.0
 author = "Dennis Risen"
 author_email = "dar5@case.edu"
-description = "Obtain credentials for system/user stored in user's HOME directory file"
+description = "Cisco Prime Infrastructure API utilities"
 long_description = file: README.md
 long_description_content_type = text/markdown
-url=https://github.com/drisen/credentials
+url=https://github.com/drisen/cpiapi
 project_urls =
-    Bug Tracker = https://github.com/drisen/credentials/issues
+    Bug Tracker = https://github.com/drisen/cpiapi/issues
 classifiers =
     Programming Language :: Python :: 3
     Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
