--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 pytz>=2022.1
 requests>=2.27
 urllib3>=1.26
-# -e ..\\credentials
-# -e ..\\loom
-credentials@git+https://github.com/drisen/credentials.git
-loom@git+https://github.com/drisen/loom.git
+git+https://github.com/drisen/credentials.git
+git+https://github.com/drisen/loom.git
