--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pytz>=2022.1
 requests>=2.27
 urllib3>=1.26
-mylib @ git+https://github.com/drisen/mylib.git
-loom @ git+https://github.com/drisen/loom.git
+git+https://github.com/drisen/mylib
+git+https://github.com/drisen/loom
