--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cpiapi"
-version = "2.1.3"
+version = "2.1.4"
 authors = [ { name="Dennis Risen", email="dar5@case.edu" }, ]
 description = "Cisco Prime Infrastructure API utilities"
 readme = "README.md"
@@ -17,8 +17,8 @@ classifiers = [
     "Operating System :: Unix",
               ]
 dependencies = [ "pytz", "requests>=2.27", "urllib3>=1.26",
-    "mylib @ git+https://github.com/drisen/mylib.git",
-    "loom @ git+https://github.com/drisen/loom.git"
+    "mylib @ git+https://github.com/drisen/mylib",
+    "loom @ git+https://github.com/drisen/loom"
 ]
 
 [project.urls]
